Tentative fix to the compilation problem